# suumo-traveltime

./: Cargo.toml  Dioxus.toml  suumo.html
assets/: main.css  map.js
src/: backend.rs  geocode.rs  lib.rs  main.rs  scrape.rs
src/components/: apartmentview.rs  buildingview.rs  criteria.rs  list.rs  mod.rs
